--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = xcursor-themes
-url = http://xorg.freedesktop.org/releases/individual/data/xcursor-themes-1.0.5.tar.gz
+url = http://xorg.freedesktop.org/releases/individual/data/xcursor-themes-1.0.6.tar.gz
 archives = 
 giturl = 
 
@@ -17,8 +17,12 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# this package is a library compatability package and only ships versioned library files
+compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
