--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = xcursor-themes
 url = http://xorg.freedesktop.org/releases/individual/data/xcursor-themes-1.0.6.tar.gz
 archives = 
-giturl = 
+giturl = https://gitlab.freedesktop.org/xorg/data/cursors
 domain = 
 alias = 
 
